Hermes update (WIP)

--- a/src/views/pages/harmony/hermes/index.ejs
+++ b/src/views/pages/harmony/hermes/index.ejs
@@ -6,7 +6,8 @@
 <%- include(`${partials}/header_main`); -%>
 <pre id="log">
 *************** 👨‍🌾 UNOFFICIAL HERMESDEFI FARMING CALCULATOR 👨‍🌾 ***************
-INFO  : https://plutus.hermesdefi.io
+INFO    : https://www.hermesdefi.io
+SUPPORT : https://www.discord.gg/hermesdefi
 *******************************************************************************
 
 </pre>
